# stratum

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: python_tests.yml  rust_tests.yml  test.yml
_rust/: Cargo.toml
_rust/src/: csr.rs  fd.rs  hashing.rs  lib.rs  one_hot_encoder.rs  standard_scaler.rs  tfidf.rs  threads.rs  tokenize.rs  truncated_svd.rs  util.rs
benchmarks/: bench_standard_scaler.py  bench_string_encoder.py  bench_tablevectorizer.py
benchmarks/adapters/: bench_string_encoder.py
benchmarks/logical_optimizer/: bench_cse.py
benchmarks/logical_optimizer/end-to-end/: 20newsgroups.py  plot_20newsgroup_results.py  plot_bench_cse_tfidf_gridsearch.py
benchmarks/runtime/: buffer_pool_input_release.py
benchmarks/rust_backend/: bench_string_encoder.py
doc/: make_icons.py
docs/: make_icons.py
examples/: 01a_encodings.py  apply_cse_on_skrub_dataops.py  dataops_example.py  employees_spec1.json  grid_search1.py  ohe_test.py  optimize_cse2.py  rusty_string_encoder_test.py  rusty_string_encoder_test2.py
skrub/: __init__.py  _config.py  _rust_backend.py  _string_encoder.py
skrub/tests/rust_backend/: test_rust_hashing_tfidf.py
stratum/: __init__.py  _api.py  _config.py  _patching.py  _rust_backend.py  config.py  patching.py
stratum/adapters/: gridsearch.py  one_hot_encoder.py  standard_scaler.py  string_encoder.py
stratum/logical_optimizer/: __init__.py  _algebraic_rewrites.py  _cse.py  _dataframe_ops.py  _numeric_ops.py  _op_comparison.py  _op_utils.py  _ops.py  _optimize.py  _physical_planning.py  _rewrites.py  _skrub_graph.py  cse.py  optimize.py  rewrite_ideas.md  utils.py
stratum/optimizer/: __init__.py  _algebraic_rewrites.py  _input_release_planning.py  _input_removal_planning.py  _linearization.py  _numeric_rewrites.py  _op_utils.py  _optimize.py  rewrite_ideas.md
stratum/optimizer/ir/: _dataframe_ops.py  _numeric_ops.py  _ops.py
stratum/patching/: _gridsearch.py  _patching.py
stratum/runtime/: __init__.py  _buffer_pool.py  _caching.py  _hash_utils.py  _object_size.py  _physical_planning.py  _scheduler.py  runtime.py  scheduler.py
stratum/search/: __init__.py  grid_search.py
stratum/tests/: test_config.py  test_import_patch.py  test_init_module.py  test_one_hot_encoder.py  test_rust_backend.py  test_rust_hashing_tfidf.py  test_string_encoder.py  test_truncated_svd.py
stratum/tests/adapters/: test_standard_scaler.py  test_string_encoder.py
stratum/tests/application/: test_multi_level_choice_graph.py
stratum/tests/logical_optimizer/: test_cse.py  test_dataframe_ops.py  test_numeric_ops.py  test_op_utils.py  test_ops.py  test_optimize.py  test_utils.py
stratum/tests/runtime/: runtime_test_utils.py  test_buffer_pool.py  test_caching.py  test_evaluate.py  test_scheduler.py  (+2 more)
stratum/utils/: _utils.py
(+63 files in other folders)
