[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "stratum"
version = "0.0.1"
description = "skrub with a Rust backend"
readme = "README.md"
authors = [{name = "Arnab Phani"}]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = [
    "skrub>=0.3",
]

[tool.maturin]
manifest-path = "_rust/Cargo.toml"
module-name = "stratum._rust_backend_native"
python-source = "."
