[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "stratum-ai" # PyPi name
version = "0.0.0.dev0"
description = "skrub with a Rust backend"
readme = "README.md"
authors = [{name = "Arnab Phani"}]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = [
    "skrub>=0.3",
    "polars",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage[toml]",
]
benchmark = [
    "lightgbm>=4.6.0",
    "xgboost>=3.1.1",
]
dev = [
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/deem-data/stratum"
Issues = "https://github.com/deem-data/stratum/issues"

[tool.maturin]
manifest-path = "_rust/Cargo.toml"
module-name = "stratum._rust_backend_native"
python-source = "."

[dependency-groups]
dev = [
    "maturin>=1.10.1",
]

[tool.coverage.run]
source = ["stratum"]
omit = [
    "stratum/tests/*",
    "**/tests/**",
    "*/__pycache__/*",
    "*/_rust_backend_native.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
